# plumise-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.ko.md  README.md  docker-compose.yml  plumise-agent.spec  pyproject.toml
proto/: inference.proto
scripts/: build-exe.py  generate_proto.sh
src/plumise_agent/api/: server.py
src/plumise_agent/chain/: __init__.py  agent.py  auth.py  config.py  reporter.py  rewards.py
src/plumise_agent/cli/: main.py
src/plumise_agent/grpc_/: __init__.py  client.py  serializer.py  server.py
src/plumise_agent/model/: __init__.py  engine.py  layer_range.py  loader.py
src/plumise_agent/node/: metrics.py  node.py  registry.py
src/plumise_agent/pipeline/: __init__.py  executor.py  topology.py
tests/: conftest.py  test_config.py  test_layer_range.py  test_metrics.py  test_serializer.py  test_topology.py
